# tempChat

./: .gitignore  README.md  docker-compose.yml  plan.md  video_script.md
backend/: Dockerfile  pyproject.toml  test_worker.py
backend/src/: main.py
backend/src/activities/: llm.py
backend/src/api/routes/: history.py  stream.py
backend/src/core/: config.py  pubsub.py  temporal.py
backend/src/models/: chat.py
backend/src/services/: fake_generator.py  llm_agent.py
backend/src/workflows/: chat.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatArea.tsx  ChatInterface.tsx  ConversationSidebar.tsx  MessageItem.tsx
frontend/src/types/: chat.ts  conversation.ts
scripts/: create-namespace.sh  setup-postgres.sh
