[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.132.0",
    "httpx>=0.28.1",
    "openai>=2.23.0",
    "pydantic>=2.12.5",
    "pydantic-ai[temporal]>=1.63.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.0",
    "temporalio>=1.20.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyright>=1.1.408",
]
